--- a/styles/styles.css
+++ b/styles/styles.css
@@ -366,6 +366,7 @@ header {
   background: -webkit-gradient(linear, left top, left bottom, from(rgb(34, 81, 109)), to(rgb(21, 50, 67)));
   background: linear-gradient(rgb(34, 81, 109), rgb(21, 50, 67));
   border: 2px solid #171a21;
+  min-height: 10.5vh;
 }
 
 .gamesUl {
@@ -477,7 +478,21 @@ footer .footerContainer a {
   padding: 25px 0;
 }
 
-<<<<<<< HEAD
+#searchBar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+#searchBar select {
+  margin: 0 3% 0 1%;
+}
+#searchBar input {
+  margin-left: 1%;
+}
+
 @media (max-width: 1000px) {
   .gamesUl {
     -webkit-box-orient: horizontal;
@@ -507,19 +522,4 @@ footer .footerContainer a {
   .gamesUl .newLiElement {
     width: auto;
   }
-=======
-#searchBar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-#searchBar select {
-  margin: 0 3% 0 1%;
-}
-#searchBar input {
-  margin-left: 1%;
->>>>>>> 3468b97ed0e49fde22fa533cde1c40662155f342
 }
